--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <HTML>
 	<head>
 		<title>Hello World</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 	</head>
 	<body>	
-		Hello world from assembly
+		<h1>Hello world from assembly</h1>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 	</body>
 </HTML>
